# my-redis

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt  adlist.c  atomicvar.h  dict.c  dict.h  endianconv.c  sds.c  sds.h
test/: CMakeLists.txt  test_adlist.c  test_dict.c  test_endianconv.c  test_sds.c
utils/: CMakeLists.txt  sha1.c
